@startuml

title __MODEL's Class Diagram__\n

  namespace  {
    namespace k.posam.blog {
      namespace model {
        class sk.posam.blog.model.Comment {
            - body : String
            - createdAt : Instant
            - id : Long
            + Comment()
            + Comment()
            + getBody()
            + getCreatedAt()
            + getId()
            + getPost()
            + getUser()
            + setBody()
            + setCreatedAt()
            + setId()
            + setPost()
            + setUser()
        }
      }
    }
  }
  

  namespace  {
    namespace k.posam.blog {
      namespace model {
        class sk.posam.blog.model.Image {
            - id : Long
            - name : String
            - picByte : byte[]
            - type : String
            + Image()
            + Image()
            + getId()
            + getName()
            + getPicByte()
            + getType()
            + setId()
            + setName()
            + setPicByte()
            + setType()
        }
      }
    }
  }
  

  namespace  {
    namespace k.posam.blog {
      namespace model {
        class sk.posam.blog.model.Post {
            - author : String
            - content : String
            - created : Instant
            - id : Long
            - title : String
            - titleImg : String
            + Post()
            + Post()
            + getAuthor()
            + getContent()
            + getCreated()
            + getId()
            + getTitle()
            + getTitleImg()
            + setAuthor()
            + setContent()
            + setCreated()
            + setId()
            + setTitle()
            + setTitleImg()
        }
      }
    }
  }
  

  namespace  {
    namespace k.posam.blog {
      namespace model {
        class sk.posam.blog.model.User {
            - email : String
            - id : Long
            - name : String
            - note : String
            - numberOfPosts : int
            - password : String
            - profilePicture : String
            - registerDate : Instant
            - surename : String
            - username : String
            + User()
            + User()
            + getEmail()
            + getId()
            + getName()
            + getNote()
            + getNumberOfPosts()
            + getPassword()
            + getProfilePicture()
            + getRegisterDate()
            + getSurename()
            + getUsername()
            + setEmail()
            + setId()
            + setName()
            + setNote()
            + setNumberOfPosts()
            + setPassword()
            + setProfilePicture()
            + setRegisterDate()
            + setSurename()
            + setUsername()
        }
      }
    }
  }
  

  sk.posam.blog.model.Comment o-- sk.posam.blog.model.Post : post
  sk.posam.blog.model.Comment o-- sk.posam.blog.model.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
